refactor: StyleTranslators now emit consumedLength on parse